<resources>
    <string name="app_name">SuperCheap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main_application" translatable="false">MainActivityApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account_now">Create a new account now</string>
    <string name="send_email_verification">send email verification</string>
    <string name="already_signed">Already signed?</string>
    <string name="email_verified_i_m_ready_to_continue">Email verified I\'m ready to continue</string>
    <string name="verification_status">Verification status:</string>
    <string name="verification_email_sent">\" we sent a verification mail to your email, please visit your email to verify your account\"</string>
    <string name="history_purchase">History purchase</string>
    <string name="add_super_to_your_favourite_list">add super to your favourite list</string>
    <string name="insert_list_of_products">insert list of products</string>
    <string name="find_single_product">find_single_product</string>
    <string name="search_product_here">search product here</string>
    <string name="search_super_here">search super here</string>
    <string name="upload_list">Upload List</string>
    <string name="sit_tight_loading">Sit tight, loading..</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="city">City</string>
    <string name="search_in_my_supers">Search In My Supers</string>
    <string name="super_name">Super Name</string>
    <string name="total_bill">total bill %.2f</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="price_f">price: %.2f ₪</string>
    <string name="manufacturer_name">Manufacturer Name:%s</string>
    <string name="manufacturer_country">Manufacturer Country:%s</string>

    <string name="price_to_unit_f">Price to Unit: %.2f</string>
    <string name="item_price">price: %.2f</string>
    <string name="all_supers">All Supers</string>
    <string name="mahsani_ashok">Mahsani Ashok</string>

    <string name="shufersal">Shufersal</string>
    <string name="victory">Victory</string>
    <string name="bareket">Bareket</string>
    <string name="h_cohen">H.Cohen</string>
    <string name="total_2f">total : %.2f</string>
    <string name="search_cart">search_cart</string>
    <string name="search_cart_uploader">search cart uploader</string>
    <string name="cart_created_by_s">cart created by: %s</string>
    <string name="cart_created_at_s">cart created at: %s</string>
    <string name="super_name_s">super name: %s</string>
    <string name="move_to_super">Move To Super</string>
    <string name="sign_out">Sign Out</string>
    <string name="find_the_ncheapest_super" translatable="false">find the\ncheapest super</string>
    <string name="server_in_maintenance_please_try_again_later">servers in maintenance please try again later</string>
    <string name="something_went_wrong">something went wrong: %s</string>
    <string name="could_not_connect_to_supers_db">could not connect to supers db</string>
    <string name="please_select_super_from_the_list">please select super from the list</string>
    <string name="no_online_carts_associated_with_your_account_you_can_search_for_a_cart_using_the_search_button">no online carts associated with your account, you can search for a cart using the search button</string>
    <string name="internet_fail">could not complete the operation, please try again later</string>
    <string name="nick_name">nick name</string>
    <string name="send_verification_email_again">click here to send email again</string>
    <string name="please_verify_your_account">Please verify your account</string>
    <string name="nickname_validation_lenght">nick name has to be between 2 to 10 characters</string>
    <string name="invalid_email_try_again">invalid email please try again</string>
    <string name="password_validation_6chars">password must contains 6 characters</string>
    <string name="welcome_space">Welcome </string>
    <string name="online_carts">Online Carts</string>
    <string name="first_screen_onboarding_text">search for supers in dashboard screen</string>
    <string name="next">next</string>
    <string name="finish">Finish</string>
    <string name="_2_make_a_list_in_specific_super">2. make a list in specific super</string>
    <string name="_1_compare_item_prices_in_your_selected_supers">1. compare Item prices in your selected supers</string>
    <string name="welcome_to_supercheap">Welcome to SuperCheap!</string>
    <string name="find_share_and_re_use_carts_in_the_online_carts_screen">find, share and re-use carts in the Online Carts screen</string>
    <string name="in_home_screen_you_can_navigate_to_2_different_screens">In home screen you can navigate to 2 different screens -</string>
    <string name="search_product_nin_specific_super">create a list \nin specific super</string>
    <string name="progress_precent" translatable="false">progress %s % </string>

</resources>