<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    android:layout_height="160dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/super_pic"
            android:layout_width="100dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/storefront" />

        <TextView
            android:id="@+id/tv_uploader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_created_by_s"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="cart created by magen levi"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_created_at_s"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_uploader"
            app:layout_constraintTop_toBottomOf="@+id/tv_uploader"
            tools:text="cart created at 1/2/2021"
            />

        <TextView
            android:id="@+id/tv_super"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_name_s"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:text="super name : victory"
            />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_2f"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tv_super"
            app:layout_constraintTop_toBottomOf="@+id/tv_super" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>