<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.screens.ThirdScreenFragment">


    <TextView
        android:id="@+id/tv_dashboard_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/in_home_screen_you_can_navigate_to_2_different_screens"
        android:textAlignment="center"


        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_dashboard_search"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:src="@drawable/find_product_in_super"
        app:layout_constraintBottom_toTopOf="@+id/iv_dashboard_mark"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <ImageView
        android:id="@+id/iv_dashboard_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/select_home"
        app:layout_constraintBottom_toTopOf="@+id/tv_nav_in_boarding"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dashboard_search" />


    <TextView
        android:id="@+id/tv_next_to_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/finish"
        android:textColor="@color/blue_sea"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_nav_in_boarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="○ ○ ●"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/select_victory"

        app:layout_constraintBottom_toTopOf="@+id/iv_dashboard_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_explain"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/_1_compare_item_prices_in_your_selected_supers"
        android:textColor="@color/blue_sea"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/_2_make_a_list_in_specific_super"
        android:textColor="@color/blue_sea"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_dashboard_search"
        app:layout_constraintStart_toStartOf="@+id/iv_dashboard_search"
        app:layout_constraintTop_toTopOf="@+id/iv_dashboard_search" />


</androidx.constraintlayout.widget.ConstraintLayout>