<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".auth.signup.SignupFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:translationZ="10dp"

        android:src="@drawable/ic_baseline_assignment_ind_24"
        app:layout_constraintEnd_toEndOf="@+id/signup_cardview"
        app:layout_constraintStart_toStartOf="@+id/signup_cardview"
        app:layout_constraintTop_toTopOf="@+id/signup_cardview" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signup_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:rotationY="1"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/light_gentle_background"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/ti_layput_password"
                app:layout_constraintEnd_toEndOf="@+id/ti_layput_password"
                app:layout_constraintStart_toStartOf="@+id/ti_layput_password"
                app:layout_constraintTop_toTopOf="@id/gl_25_signup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gentle_blue"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_layput_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gentle_blue"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button_With_Email"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gentle_blue"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/send_email_verification"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/go_to_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_layput_password" />

            <TextView
                android:id="@+id/go_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/already_signed"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button_With_Email" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_25_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <TextView
                android:id="@+id/tv_email_verification_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gl_65_signup"
                tools:text="email verification status" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_65_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.65" />

            <Button
                android:id="@+id/btn_when_email_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/happy_green"
                android:text="@string/email_verified_i_m_ready_to_continue"
                android:textAllCaps="false"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_email_verification_status"
                app:layout_constraintStart_toStartOf="@+id/tv_email_verification_status"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_verification_status" />

            <ProgressBar
                android:id="@+id/pb_signup"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/sign_up_button_With_Email"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_button_With_Email"
                app:layout_constraintTop_toTopOf="@+id/sign_up_button_With_Email" />

        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>